--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=CoachMS
 server.port=8091
 spring.jackson.default-property-inclusion:NON_NULL
 spring.config.import=optional:configserver:http://localhost:1111
+server.error.include-stacktrace=never
